--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.1.0",
     "resend": "^4.7.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.0"
