--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@stripe/stripe-js": "^7.8.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "class-variance-authority": "^0.7.1",
@@ -22,7 +24,7 @@
     "react-dom": "^19.0.0",
     "recharts": "^3.1.0",
     "resend": "^4.7.0",
-    "stripe": "^18.3.0",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
